<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bachground"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/toolbar" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/main_quote"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bn_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bachground"
            android:gravity="center"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="@string/button1"
            android:textSize="22dp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/bn_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bachground"
            android:gravity="center"
            android:text="@string/button2"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bn_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:background="@drawable/bachground"
            android:gravity="center"
            android:text="@string/button3"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bn_4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/bachground"
            android:gravity="center"
            android:text="@string/button4"
            android:textSize="18dp"
            android:textStyle="bold" />


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_draw"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu" />


</androidx.drawerlayout.widget.DrawerLayout>