<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout_s"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".SchoolActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img3"
        android:paddingLeft="10dp"
        android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="School Discipline"
            android:textColor="#000"
            android:textSize="40dp"
            android:textStyle="bold" />



     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/scl_disc"
         android:textSize="20dp"
         android:textColor="#000"
         android:layout_marginTop="30dp"
         android:lineSpacingExtra="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Importance of Discipline in Life"
            android:textColor="#000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="1. Being Focused"
            android:textColor="#000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/scl_img1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/scl_img1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="20dp"
            android:text="@string/focus"
            android:textColor="#000"
            android:textSize="20dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Lead Stress-Free Life"
            android:textColor="#000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/scl_img2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/scl_img2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="20dp"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:text="@string/stress"
            android:textColor="#000"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="3. Better Academic Performance"
            android:textColor="#000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/academy"
            android:textColor="#000"
            android:lineSpacingExtra="20dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4. Stay Active "
            android:textColor="#000"
            android:textSize="30dp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/scl_img3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/scl_img3"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="20dp"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:text="@string/active"
            android:textColor="#000"
            android:textSize="20dp"/>

    </LinearLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_draw_s"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

