<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout_e"
    tools:context=".EnvironmentActivity">



    <ScrollView
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img3"
        android:scrollbars="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Ways to create an environment of self discipline "
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/env"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/env"
                android:textSize="20dp"
                android:textColor="#000"
                android:lineSpacingExtra="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:text="1) Lead from the front"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:text="@string/env_lead"
                android:textColor="#000"
                android:lineSpacingExtra="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:text="2) Get rid of distractions"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/env_distractions"
                android:textColor="#000"
                android:textSize="20dp"
                android:lineSpacingExtra="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:text="3. Create a pleasant working environment"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:text="@string/env_pleasant"
                android:textColor="#000"
                android:lineSpacingExtra="10dp"/>

        </LinearLayout>


    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_draw_e"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu" />


</androidx.drawerlayout.widget.DrawerLayout>

